[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/player.png" type="Texture" id=2]
[ext_resource path="res://Player/dbg_DebugMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Gun/Gun.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "show_message"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="InputEventKey" id=2]
scancode = 82
physical_scancode = 82

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 20.0
editor_draw_drag_margin = true

[node name="Flippable" type="Node2D" parent="."]

[node name="Gun" parent="Flippable" instance=ExtResource( 4 )]
position = Vector2( 13, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../UILayer/UI/MessageLabel")
anims/RESET = SubResource( 4 )
anims/show_message = SubResource( 5 )

[node name="dbg_DebugLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="dbg_DebugMenu" type="Control" parent="dbg_DebugLayer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="dbg_Background" type="ColorRect" parent="dbg_DebugLayer/dbg_DebugMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.294118 )

[node name="dbg_WeaponSelect" type="OptionButton" parent="dbg_DebugLayer/dbg_DebugMenu"]
margin_left = 163.0
margin_top = 44.0
margin_right = 228.0
margin_bottom = 64.0
text = "pistol"
items = [ "pistol", null, false, 0, null, "smg", null, false, 1, null, "assault_rifle", null, false, 2, null, "death_lazer", null, false, 3, null ]
selected = 0

[node name="dbg_Buttons" type="Control" parent="dbg_DebugLayer/dbg_DebugMenu"]
margin_left = 315.0
margin_top = 174.0
margin_right = 315.0
margin_bottom = 174.0

[node name="dbg_ReloadScene" type="Button" parent="dbg_DebugLayer/dbg_DebugMenu/dbg_Buttons"]
margin_left = -312.0
margin_top = -168.0
margin_right = -218.0
margin_bottom = -148.0
shortcut = SubResource( 3 )
text = "reload scene"

[node name="dbg_KillAll" type="Button" parent="dbg_DebugLayer/dbg_DebugMenu/dbg_Buttons"]
margin_left = -208.0
margin_top = -168.0
margin_right = -196.0
margin_bottom = -148.0
text = "kill all"

[node name="dbg_DisableAI" type="CheckBox" parent="dbg_DebugLayer/dbg_DebugMenu/dbg_Buttons"]
margin_left = -152.0
margin_top = -168.0
margin_right = -63.0
margin_bottom = -144.0
text = "disable ai"

[node name="dbg_GodMode" type="CheckBox" parent="dbg_DebugLayer/dbg_DebugMenu/dbg_Buttons"]
margin_left = -64.0
margin_top = -168.0
margin_right = -40.0
margin_bottom = -144.0
text = "god mode"

[node name="dbg_Sliders" type="Control" parent="dbg_DebugLayer/dbg_DebugMenu"]
margin_left = 3.0
margin_top = 32.0
margin_right = 3.0
margin_bottom = 32.0

[node name="dbg_TimescaleLabel" type="Label" parent="dbg_DebugLayer/dbg_DebugMenu/dbg_Sliders"]
margin_right = 63.0
margin_bottom = 14.0
text = "timescale"

[node name="dbg_TimescaleSlider" type="HSlider" parent="dbg_DebugLayer/dbg_DebugMenu/dbg_Sliders/dbg_TimescaleLabel"]
margin_top = 16.0
margin_right = 152.0
margin_bottom = 32.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="dbg_CameraZoomLabel" type="Label" parent="dbg_DebugLayer/dbg_DebugMenu/dbg_Sliders"]
margin_top = 39.0
margin_right = 67.0
margin_bottom = 53.0
text = "cam zoom"

[node name="dbg_CameraZoom" type="HSlider" parent="dbg_DebugLayer/dbg_DebugMenu/dbg_Sliders/dbg_CameraZoomLabel"]
margin_top = 16.0
margin_right = 152.0
margin_bottom = 32.0
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.5

[node name="dbg_Paused" type="Label" parent="dbg_DebugLayer/dbg_DebugMenu"]
margin_left = 264.0
margin_top = 160.0
margin_right = 315.0
margin_bottom = 174.0
text = "PAUSED"

[node name="GravityEdit" type="LineEdit" parent="dbg_DebugLayer/dbg_DebugMenu"]
margin_left = 163.0
margin_top = 71.0
margin_right = 221.0
margin_bottom = 95.0
text = "1500"

[node name="Label" type="Label" parent="dbg_DebugLayer/dbg_DebugMenu/GravityEdit"]
margin_left = 65.0
margin_right = 110.0
margin_bottom = 14.0
text = "Gravity"

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HealthBar" type="ProgressBar" parent="UILayer/UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
step = 1.0

[node name="MessageLabel" type="Label" parent="UILayer/UI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 88.0
margin_bottom = 102.0
align = 1
valign = 1
percent_visible = 0.0

[node name="DebugUI" type="Control" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FPSMonitor" type="Label" parent="UILayer/DebugUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_bottom = 24.0
text = "FPS: 000"
align = 1
valign = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="item_selected" from="dbg_DebugLayer/dbg_DebugMenu/dbg_WeaponSelect" to="dbg_DebugLayer/dbg_DebugMenu" method="_on_dbg_WeaponSelect_item_selected"]
[connection signal="pressed" from="dbg_DebugLayer/dbg_DebugMenu/dbg_Buttons/dbg_ReloadScene" to="dbg_DebugLayer/dbg_DebugMenu" method="_on_dbg_ReloadScene_pressed"]
[connection signal="pressed" from="dbg_DebugLayer/dbg_DebugMenu/dbg_Buttons/dbg_KillAll" to="dbg_DebugLayer/dbg_DebugMenu" method="_on_dbg_KillAll_pressed"]
[connection signal="toggled" from="dbg_DebugLayer/dbg_DebugMenu/dbg_Buttons/dbg_DisableAI" to="dbg_DebugLayer/dbg_DebugMenu" method="_on_dbg_DisableAI_toggled"]
[connection signal="toggled" from="dbg_DebugLayer/dbg_DebugMenu/dbg_Buttons/dbg_GodMode" to="dbg_DebugLayer/dbg_DebugMenu" method="_on_dbg_GodMode_toggled"]
[connection signal="value_changed" from="dbg_DebugLayer/dbg_DebugMenu/dbg_Sliders/dbg_TimescaleLabel/dbg_TimescaleSlider" to="dbg_DebugLayer/dbg_DebugMenu" method="_on_dbg_TimescaleSlider_value_changed"]
[connection signal="value_changed" from="dbg_DebugLayer/dbg_DebugMenu/dbg_Sliders/dbg_CameraZoomLabel/dbg_CameraZoom" to="dbg_DebugLayer/dbg_DebugMenu" method="_on_dbg_CameraZoom_value_changed"]
[connection signal="text_entered" from="dbg_DebugLayer/dbg_DebugMenu/GravityEdit" to="dbg_DebugLayer/dbg_DebugMenu" method="_on_GravityEdit_text_entered"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
